; ModuleID = '/home/carl/AnghaBench/tmux/extr_window.c_window_pane_previous_by_number.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_window.c_window_pane_previous_by_number.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.window = type { i32 }
%struct.window_pane = type { i32 }

@window_panes = common dso_local global i32 0, align 4
@entry = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.window_pane* @window_pane_previous_by_number(%struct.window* %0, %struct.window_pane* %1, i64 %2) #0 {
  %4 = alloca %struct.window*, align 8
  %5 = alloca %struct.window_pane*, align 8
  %6 = alloca i64, align 8
  store %struct.window* %0, %struct.window** %4, align 8
  store %struct.window_pane* %1, %struct.window_pane** %5, align 8
  store i64 %2, i64* %6, align 8
  br label %7

7:                                                ; preds = %22, %3
  %8 = load i64, i64* %6, align 8
  %9 = icmp sgt i64 %8, 0
  br i1 %9, label %10, label %25

10:                                               ; preds = %7
  %11 = load %struct.window_pane*, %struct.window_pane** %5, align 8
  %12 = load i32, i32* @window_panes, align 4
  %13 = load i32, i32* @entry, align 4
  %14 = call %struct.window_pane* @TAILQ_PREV(%struct.window_pane* %11, i32 %12, i32 %13)
  store %struct.window_pane* %14, %struct.window_pane** %5, align 8
  %15 = icmp eq %struct.window_pane* %14, null
  br i1 %15, label %16, label %21

16:                                               ; preds = %10
  %17 = load %struct.window*, %struct.window** %4, align 8
  %18 = getelementptr inbounds %struct.window, %struct.window* %17, i32 0, i32 0
  %19 = load i32, i32* @window_panes, align 4
  %20 = call %struct.window_pane* @TAILQ_LAST(i32* %18, i32 %19)
  store %struct.window_pane* %20, %struct.window_pane** %5, align 8
  br label %21

21:                                               ; preds = %16, %10
  br label %22

22:                                               ; preds = %21
  %23 = load i64, i64* %6, align 8
  %24 = add nsw i64 %23, -1
  store i64 %24, i64* %6, align 8
  br label %7

25:                                               ; preds = %7
  %26 = load %struct.window_pane*, %struct.window_pane** %5, align 8
  ret %struct.window_pane* %26
}

declare dso_local %struct.window_pane* @TAILQ_PREV(%struct.window_pane*, i32, i32) #1

declare dso_local %struct.window_pane* @TAILQ_LAST(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
